# OSLab_2

./: .gitignore  CMakeLists.txt  get_address.txt  page_fault_overhead.txt
collect_plots/: CMakeLists.txt  collect_plots  collect_plots.c
complex_tests/: CMakeLists.txt  complex_test.c
final_tests/: CMakeLists.txt  final_tests  final_unit_tests.c
lib/: CMakeLists.txt  external_pager.c  external_pager.h  map.c  map.h  map.h.gch  memory_address.c  memory_address.h  memory_dispatcher.c  memory_dispatcher.cpp  memory_dispatcher.h  memory_dispatcher.h.gch  memory_pager.c  memory_pager.cpp  memory_pager.h  memory_pager.h.gch  mmemory.c  mmemory.cpp  mmemory.h  mmemory.h.gch  page.c  page.cpp  page.h  page.h.gch  queue.c  queue.h  queue.h.gch  segment.c  segment.cpp  segment.h  segment.h.gch  test.c  test.c~
queue_test/: CMakeLists.txt  queue_test.c
report/: .~lock.lab2.odt#  activiry_write.zargo  activity_malloc.xmi  activity_malloc.zargo  activity_read.zargo  classes.xmi  free.zargo  lab2.odt  malloc.xmi
stress_tests/: CMakeLists.txt  stress-test  stress_tests.c  stress_tests.cpp
test/: first_iteration_unit_tests.cpp
test_paging/: CMakeLists.txt  test_paging.c
tests_on_c/: CMakeLists.txt  test.c
unit_tests/: CMakeLists.txt  unit-test  unit_test.c  unit_test.cpp
unit_tests/Безымянная папка/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
unit_tests/Безымянная папка/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
unit_tests/Безымянная папка/queue_test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+6 files in other folders)
